# CSym

./: .gitignore  CHANGELOG.md  CSym.cabal  LICENSE  README.md  ast.ast  carl  example.csym  test.ast  test.csym
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
examples/: cnot.csym  had.csym  if.csym
lang/: Ast.hs  Lexer.x  Parser.y  Printer.hs
parser/: Lexer.x  Parser.y  Printer.hs
