cabal-version:      3.0

name:               CSym


version:            0.1.0.0
license:            BSD-3-Clause

license-file:       LICENSE

author:             flavio

maintainer:         flavioborinjunior@gmail.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library parser
    import : warnings

    build-depends:
        base ^>=4.18.0.0
        , array
        , GenericPretty
        , numbers
    
    build-tool-depends: happy:happy, alex:alex

    hs-source-dirs: parser

    exposed-modules:
        Parser
        Lexer
        Ast
        Printer

    default-language: Haskell2010


executable CSym
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.0.0
                      , CSym:parser
    hs-source-dirs:   app
    default-language: Haskell2010
